objects/Election__c.object
<CustomObject>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12-18</fullName>
                </value>
                <value>
                    <fullName>19-40</fullName>
                </value>
                <value>
                    <fullName>41-50</fullName>
                </value>
                <value>
                    <fullName>51-60</fullName>
                </value>
                <value>
                    <fullName>61-80</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Favorite_Color__c</fullName>
        <label>Favorite Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Governor</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>Mayor</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Representative</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <label>Test 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <label>Test 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testing__c</fullName>
        <label>testing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Election</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Election Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Elections</pluralLabel>
    <recordTypes>
        <fullName>Elections_RT</fullName>
        <active>true</active>
        <label>Elections RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>If_Fullname_is_populated_then_require_BD</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Full_Name__c)),
ISBLANK( Birthdate__c)
)</errorConditionFormula>
        <errorMessage>Birthdate is required when Fullname is populated</errorMessage>
    </validationRules>
</CustomObject>